Fixing alignment issue, adding social media icons, fixing header for tablet

--- a/css/_jobcentre_theme.less
+++ b/css/_jobcentre_theme.less
@@ -685,6 +685,7 @@ a.header-action:link, a.header-action:visited {
 .bkg-callout {
     background: #005ca2 url(../images/splash-callout.jpg?v=2) no-repeat top center;
     background-size: cover;
+    background-attachment: fixed;
     @media(max-width: 1500px){ background-size: cover; }
     @media(max-width: @screen-xs-max){ background-image: none; }
 }
