--- a/css/jobcentre.css
+++ b/css/jobcentre.css
@@ -736,6 +736,7 @@ a.header-action:visited {
 .bkg-callout {
   background: #005ca2 url(../images/splash-callout.jpg?v=2) no-repeat top center;
   background-size: cover;
+  background-attachment: fixed;
 }
 @media (max-width: 1500px) {
   .bkg-callout {
